--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "lib/index.js",
   "scripts": {
-    "test": "mocha --reporter spec --timeout 5000 --recursive test/",
+    "test": "mocha --reporter spec --timeout 10000 --recursive test/",
     "test-cov": "istanbul cover --report html ./node_modules/mocha/bin/_mocha -- -t 5000 --recursive  -R spec test/",
     "compile": "babel --loose all --optional runtime --stage 0 --modules common src/ --out-dir lib/",
     "watch-compile": "npm run compile -- --watch",
@@ -22,15 +22,16 @@
   "devDependencies": {
     "babel": "5.8.23",
     "babel-eslint": "4.1.3",
-    "eslint": "1.8.0",
-    "istanbul": "0.4.0",
-    "mocha": "1.20.1",
-    "thinkjs": "2.x.x",
     "basic-auth-connect": "^1.0.0",
     "body-parser": "^1.12.4",
+    "eslint": "1.8.0",
     "express": "^4.12.4",
+    "istanbul": "0.4.0",
+    "lodash": "^4.0.0",
+    "mocha": "1.20.1",
     "should": "^6.0.3",
-    "supertest": "^1.0.1"
+    "supertest": "^1.0.1",
+    "thinkjs": "2.x.x"
   },
   "author": "",
   "license": "ISC",
