--- a/example/thinkjs/package.json
+++ b/example/thinkjs/package.json
@@ -9,9 +9,10 @@
     "watch": "npm run watch-compile"
   },
   "dependencies": {
-    "thinkjs": "2.2.x",
     "babel-runtime": "6.x.x",
-    "source-map-support": "0.4.0"
+    "source-map-support": "0.4.0",
+    "think-cors": "^1.1.0",
+    "thinkjs": "2.2.x"
   },
   "devDependencies": {
     "babel-cli": "^6.18.0",
